# ethereal-chat

./: Cargo.toml  README.md  makefile
browser/: index.html  package.json
browser/src/: App.vue
browser/src/assets/: base.css  fonts.css  main.css
src/: lib.rs  logger.rs  main.rs  session.rs
