[package]
name = "ethereal-chat"
version = "0.1.0"
authors = ["Peter Sooley <peter.sooley@gmail.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"

[dependencies]
axum = { version = "0.2.5", features = ["ws"] }
tokio = { version = "1.12.0", features = ["full"] }
hyper = { version = "0.14.13", features = ["full"] }
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
