[package]
name = "ethereal-chat"
version = "0.1.0"
authors = ["Peter Sooley <peter.sooley@gmail.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"

[dependencies]
axum = { version = "0.2.5", features = ["ws"] }
futures = "0.3.17"
hyper = { version = "0.14.13", features = ["full"] }
tokio = { version = "1.12.0", features = ["full"] }
tower = { version = "0.4.8", features = ["full"] }
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
serde = "1.0.130"
serde_json = "1.0.68"
uuid = { version = "0.8", default-features = false, features = ["v4"] }
